Exposing ONU restart EAPOL/DHCP/IGMP endpoints
